--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ name: CI
 
 # Controls when the workflow will run
 on:
+  schedule:
+    - cron: '4 4 ? * MON'
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
@@ -27,7 +29,7 @@ jobs:
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Action"
           git add .
-          git commit -m "regular repos.csv"
+          git commit -m "update sites"
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
